--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,19 @@
 {
   "name": "ascent-matrix-backend",
   "version": "1.0.0",
+  "private": true,
   "main": "dist/server.js",
+
+  "engines": {
+    "node": ">=18"
+  },
+
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts"
   },
+
   "dependencies": {
     "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
@@ -20,6 +27,7 @@
     "qrcode": "^1.5.3",
     "razorpay": "^2.9.4"
   },
+
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
