--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "CommonJS",
     "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
-    "strict": false,
+    "strict": true,
     "skipLibCheck": true
-  },
-  "include": ["src/**/*"]
+  }
 }
