--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
 
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
 
   "scripts": {
@@ -15,14 +15,14 @@
   },
 
   "dependencies": {
-    "cloudinary": "^2.9.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.12",
+    "nodemailer": "^6.9.13",
     "pdfkit": "^0.15.0",
     "qrcode": "^1.5.3",
     "razorpay": "^2.9.4"
@@ -34,6 +34,8 @@
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
     "@types/qrcode": "^1.5.5",
+    "@types/pdfkit": "^0.13.5",
+    "@types/multer": "^1.4.7",
     "tsx": "^4.11.0",
     "typescript": "^5.4.5"
   }
