--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "src",
     "outDir": "dist",
     "esModuleInterop": true,
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
     "skipLibCheck": true
   }
 }
