--- a/backend/package.json
+++ b/backend/package.json
@@ -22,17 +22,16 @@
     "firebase-admin": "^12.1.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.13",
     "pdfkit": "^0.15.0",
     "qrcode": "^1.5.3",
-    "razorpay": "^2.9.4"
+    "razorpay": "^2.9.4",
+    "resend": "^3.5.0"
   },
 
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
-    "@types/nodemailer": "^6.4.15",
     "@types/qrcode": "^1.5.5",
     "@types/pdfkit": "^0.13.5",
     "@types/multer": "^1.4.7",
