--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 
   "scripts": {
     "dev": "vite",
-    "build": "node node_modules/vite/bin/vite.js build",
+    "build": "vite build",
     "preview": "vite preview"
   },
 
@@ -18,13 +18,14 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
-    "firebase": "^12.7.0"
+    "firebase": "^12.7.0",
+    "lucide-react": "^0.475.0"
   },
 
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
+    "vite": "^6.4.1",
     "@types/node": "^22.14.0"
   }
 }
