--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+
+  "engines": {
+    "node": ">=18"
   },
+
+  "scripts": {
+    "dev": "node node_modules/vite/bin/vite.js",
+    "build": "node node_modules/vite/bin/vite.js build",
+    "preview": "node node_modules/vite/bin/vite.js preview"
+  },
+
   "dependencies": {
     "@google/genai": "^1.34.0",
     "buffer": "^6.0.3",
@@ -29,6 +35,7 @@
     "react-router-dom": "^7.9.6",
     "url": "^0.11.4"
   },
+
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
