--- a/package.json
+++ b/package.json
@@ -9,37 +9,34 @@
   },
 
   "scripts": {
-    "dev": "node node_modules/vite/bin/vite.js",
-    "build": "node node_modules/vite/bin/vite.js build",
-    "preview": "node node_modules/vite/bin/vite.js preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
 
   "dependencies": {
     "@google/genai": "^1.34.0",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
-    "fs": "^0.0.1-security",
+    "framer-motion": "^11.11.7",
     "lucide-react": "^0.562.0",
     "nodemailer": "^7.0.12",
-    "path": "^0.12.7",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
-    "url": "^0.11.4"
+    "react-router-dom": "^7.9.6"
   },
 
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.4.1"
   }
 }
